src/objects/Program_Product_ASO__c.object
<CustomObject>
    <description>A Joined Table for assigning different products to a program</description>
    <fields>
        <fullName>ActionReward__c</fullName>
        <formula>HYPERLINK(&apos;/apex/Loan_Reward?ID=&apos;+Id, &quot;Edit&quot;, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Rules__c</fullName>
        <formula>HYPERLINK(&apos;/apex/Loan_RulesEngine?ID=&apos;+Id, &quot;Edit&quot;, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Rules</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Association_Name__c</fullName>
        <formula>Program__r.Name &amp;&quot;-&quot;&amp;  Product__r.Name</formula>
        <label>Association Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Name__c</fullName>
        <label>Check Name</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DWH_Import__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DWH Import</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DWH_Last_Sync__c</fullName>
        <label>DWH Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DWH_Status__c</fullName>
        <label>DWH Status</label>
        <picklist>
            <picklistValues>
                <fullName>Queued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Name_URL__c</fullName>
        <formula>HYPERLINK(&apos;/?sort=&apos; &amp; Product__r.Name,&apos;&apos;,&apos;_self&apos;) &amp; 
HYPERLINK(&apos;/apex/Loan_Product?id=&apos;+Product__c, Product__r.Name ,&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Rewards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Name_URL__c</fullName>
        <formula>HYPERLINK(&apos;/?sort=&apos; &amp; Program__r.Program_Name__c,&apos;&apos;,&apos;_self&apos;) &amp; 
HYPERLINK(&apos;/apex/Loan_Reward?ID=&apos;+Id, Program__r.Program_Name__c ,&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <formula>Program__r.Program_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>PPAS</relationshipLabel>
        <relationshipName>Rewards</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reward__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reward</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rules_Engine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rules Engine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <label>VAT</label>
        <precision>12</precision>
        <scale>9</scale>
        <type>Percent</type>
    </fields>
    <label>Program Product ASO</label>
    <listViews>
        <fullName>All_Reward</fullName>
        <columns>Program_Name_URL__c</columns>
        <columns>Product_Name_URL__c</columns>
        <columns>Reward__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ActionReward__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Reward</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PPAS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ASO_Product</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Product__c)</errorConditionFormula>
        <errorMessage>Product ID cannot be blank</errorMessage>
    </validationRules>
</CustomObject>